# sakhalin_hack

./: .gitignore  README.md  docker-compose.yml
sakhalin_hack/: Dockerfile  README.md  entrypoint.sh  env  pyproject.toml  requirements.txt
sakhalin_hack/src/: manage.py
sakhalin_hack/src/apps/appeals/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
sakhalin_hack/src/apps/tasks/: admin.py  forms.py  models.py  urls.py  views.py
sakhalin_hack/src/apps/tasks/services/: image_service.py
sakhalin_hack/src/apps/users/: admin.py  auth_backend.py  forms.py  models.py  services.py  urls.py  views.py
sakhalin_hack/src/apps/users/backends/: auth_backend.py
sakhalin_hack/src/core/: urls.py
sakhalin_hack/src/core/settings/: __init__.py  auth.py  common.py  email.py  logging.py
sakhalin_hack/src/templates/: base.html
sakhalin_hack/src/templates/components/: appeals.html  appeals_company.html  cleaner_statistic.html
sakhalin_hack/src/templates/pages/: add_report.html  add_task.html  base.html  general_report.html  home.html  view_report.html
sakhalin_hack/src/templates/pages/appeals/: create_appeal.html  create_appeal_answer.html  view_appeal_answer.html
sakhalin_hack/src/templates/pages/profiles/: add_report.html  add_task.html  cleaner_all_tasks_info.html  cleaner_info.html  cleaner_profile.html  create_quality_assessment.html  error.html  manager_profile.html  view_quality_assessment.html  (+1 more)
sakhalin_hack/src/templates/registration/: email_login.html  get_email_password.html  login.html  otp_verified_form.html  phone_number_form.html
(+3 files in other folders)
