[tool.poetry]
name = "sakhalin-hack"
version = "0.1.0"
description = ""
authors = ["maksimzhohov <zhohovmaksim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
bcrypt = "^4.0.1"
gpsphoto = "^2.2.3"
exifread = "^3.0.0"
piexif = "^1.1.3"
exif = "^1.6.0"
requests = "^2.31.0"
gunicorn = "^21.2.0"
certifi = "^2023.7.22"
django-filter = "^23.3"
google = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
